# svgear

./: .gitmodules
mathjax-svg-server/: package.json  pnpm-lock.yaml  server.js
svgear/: Cargo.toml
svgear/emacs/: Cargo.toml  svgear.el
svgear/emacs/src/: async_gear.rs  lib.rs  raw_value.rs
svgear/examples/: render_svg.rs
svgear/src/: client.rs  error.rs  http_painter.rs  lib.rs  main.rs  manager.rs  mermaid_painter.rs  painter.rs  rpc.rs
svgear/src/painter/: mathjax_server.rs  mermaid.rs  mod.rs  node_server.rs
svgear/tests/: manager_test.rs
