[package]
name = "svgear"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json"] }
resvg = "0.14"
anyhow = "1.0"
fxhash = "0.2"
thiserror = "1.0"
clap = { version = "4.4", features = ["derive"] }
